# rust-imdb-api

./: Cargo.toml  LICENSE  README.md
examples/: basic.rs
src/: client.rs  constants.rs  error.rs  lib.rs  signer.rs
