[package]
name = "imdb-api"
version = "0.1.0"
edition = "2021"
authors = ["rajdeenoo"]
description = "Rust IMDB client using the IMDB JSON web service"
license = "MIT"
repository = "https://github.com/raj/rust-imdb-api"
keywords = ["imdb", "api", "movie", "tv"]
categories = ["api-bindings", "web-programming::http-client"]

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
url = "2.5"
urlencoding = "2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22"
regex = "1.10"
chrono = "0.4"
thiserror = "1.0"

[dev-dependencies]
tokio = { version = "1.35", features = ["full"] }

[lib]
name = "imdb_api"
path = "src/lib.rs"

[[example]]
name = "basic"
path = "examples/basic.rs"
